--- a/index.html
+++ b/index.html
@@ -1,10 +1,70 @@
 <!DOCTYPE html>
-<html> 
-    <head>
-        <link href="styles.css" rel='stylesheet'>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <link href="styles.css" rel="stylesheet" />
+    <title>ACME</title>
+  </head>
 
-    </head>
-    <body>
-        <p>hello</p>
-    </body>
+  <body>
+    <header>
+      <div class="logo">
+        <p>Acme Layout</p>
+      </div>
+      <nav>
+        <div id="nava">
+          <a>Users</a>
+          <a>Departments</a>
+          <a>Contacts</a>
+        </div>
+      </nav>
+    </header>
+      <h2>Users</h2>
+      <section id="user">
+      <form>
+        <h1>Create A User</h1>
+        <label>FirstName</label><input type="text" name="First Name">
+        <br>
+        <label>LastName</label><input type="text" name="Last Name">
+        <br>
+        <label>Department</label><input type="search">
+        <br>
+        <button>clear</button>
+        <button id="save">save</button>
+      </form>
+    </section>
+
+    <section id="cards">
+      <div class="card">
+        <p>User A</p>
+        <p>Some text for the user</p>
+      </div>
+      <div class="card">
+        <p>User A</p>
+        <p>Some text for the user</p>
+        <p>Some text for the user</p>
+        <p>Some text for the user</p>
+      </div>
+      <div class="card">
+        <p>User A</p>
+        <p>Some text for the user</p>
+      </div>
+      <div class="card">
+        <p>User A</p>
+        <p>Some text for the user</p>
+      </div>
+      <div class="card">
+        <p>User A</p>
+        <p>Some text for the user</p>
+      </div>
+      <div class="card">
+        <p>User A</p>
+        <p>Some text for the user</p>
+      </div>
+      <div class="card">
+        <p>User A</p>
+        <p>Some text for the user</p>
+      </div>
+    </section>
+  </body>
 </html>
