mobile not scaling like other page

--- a/index.html
+++ b/index.html
@@ -12,59 +12,69 @@
         <p>Acme Layout</p>
       </div>
       <nav>
-        <div id="nava">
-          <a>Users</a>
-          <a>Departments</a>
-          <a>Contacts</a>
+        
+          <div class="item item1">
+            <a>Users</a>
+          </div>
+          <div class="item item2">
+            <a>Departments</a>
+          </div>
+          <div class="item item3">
+            <a>Contacts</a>
+        
         </div>
       </nav>
     </header>
-      <h2>Users</h2>
-      <section id="user">
+    <h2>Users</h2>
+    <section id="user">
       <form>
         <h1>Create A User</h1>
-        <label>FirstName</label><input type="text" name="First Name">
-        <br>
-        <label>LastName</label><input type="text" name="Last Name">
-        <br>
-        <label>Department</label><input type="search">
-        <br>
+        <label>FirstName</label><input type="text" name="First Name" />
+        <br />
+        <label>LastName</label><input type="text" name="Last Name" />
+        <br />
+        <label>Department</label><input type="search" />
+        <br />
+        <div>
         <button>clear</button>
         <button id="save">save</button>
+        </div>
       </form>
     </section>
 
     <section id="cards">
-      <div class="card">
+      <div>
+      <div class="card deck">
         <p>User A</p>
         <p>Some text for the user</p>
       </div>
-      <div class="card">
+      <div class="card deck">
         <p>User A</p>
         <p>Some text for the user</p>
         <p>Some text for the user</p>
         <p>Some text for the user</p>
       </div>
-      <div class="card">
+      <div class="card deck">
         <p>User A</p>
         <p>Some text for the user</p>
       </div>
-      <div class="card">
+      <div class="card deck">
         <p>User A</p>
         <p>Some text for the user</p>
       </div>
-      <div class="card">
+      <div class="card deck">
         <p>User A</p>
         <p>Some text for the user</p>
       </div>
-      <div class="card">
+      <div class="card deck">
         <p>User A</p>
         <p>Some text for the user</p>
       </div>
-      <div class="card">
+      <div class="card duck">
         <p>User A</p>
         <p>Some text for the user</p>
       </div>
+      <div>
     </section>
   </body>
 </html>
